syntax = "proto3";

package kessel.relations.v1beta1;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/project-kessel/relations-api/api/kessel/relations/v1beta1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.relations.v1beta1";

service KesselFencingService {
    rpc AcquireLock(AcquireLockRequest) returns (AcquireLockResponse) {
        option (google.api.http) = {
            post: "/v1beta1/acquirelock"
            body: "*"
        };
    };
}

message AcquireLockRequest {
    string identifier = 1 [(buf.validate.field).required = true];    
    optional string existing_token = 2;
}

message AcquireLockResponse {
    string new_token = 1;
}

message FencingCheck {
    string identifier = 1 [(buf.validate.field).required = true];
    string token = 2 [(buf.validate.field).required = true];
}
